--- a/src/static/app/sass/helpers/common/_defaults.scss
+++ b/src/static/app/sass/helpers/common/_defaults.scss
@@ -6,6 +6,10 @@ textarea {
 	color: palette('root', 'root');
 }
 
+body, html {
+	height: auto;
+}
+
 // Remove the gap between images, videos, audio and canvas and the bottom of
 // their containers: h5bp.com/i/440
 audio,
