--- a/src/static/app/sass/modules/_back-to-top.scss
+++ b/src/static/app/sass/modules/_back-to-top.scss
@@ -7,7 +7,7 @@
 	border-radius: $common-border-radius 0 0 $common-border-radius;
 	box-shadow: 1px 1px 1px rgba(70, 70, 70, 0.5);
 	position: fixed;
-	bottom: $spacing*1.5;
+	bottom: $spacing;
 	right: em-calc(-10);
 	width: em-calc(50);
 	height: em-calc(40);
